overflow fixed

--- a/src/App.css
+++ b/src/App.css
@@ -538,6 +538,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.fixed{
+  position: fixed;
+}
+
 .absolute{
   position: absolute;
 }
@@ -582,10 +586,6 @@ video {
   top: 1.25rem;
 }
 
-.top-36{
-  top: 9rem;
-}
-
 .z-10{
   z-index: 10;
 }
@@ -600,10 +600,6 @@ video {
 
 .z-50{
   z-index: 50;
-}
-
-.z-30{
-  z-index: 30;
 }
 
 .mx-5{
@@ -730,6 +726,10 @@ video {
 
 .max-w-\[250px\]{
   max-width: 250px;
+}
+
+.max-w-\[30\%\]{
+  max-width: 30%;
 }
 
 .cursor-pointer{
@@ -939,18 +939,8 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* Show the navigation bar */
-
-.show-nav {
-  transform: translateY(0);
-  transition: transform 0.3s ease-in-out;
-}
-
-/* Hide the navigation bar */
-
-.hide-nav {
-  transform: translateY(-100%);
-  transition: transform 0.3s ease-in-out;
+body{
+  width: screen;
 }
 
 .hover\:bg-\[\#f6f5f3\]:hover{
@@ -1007,6 +997,10 @@ video {
 
   .md\:w-\[600px\]{
     width: 600px;
+  }
+
+  .md\:max-w-\[30\%\]{
+    max-width: 30%;
   }
 
   .md\:text-3xl{
