--- a/src/index.css
+++ b/src/index.css
@@ -5,14 +5,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Show the navigation bar */
-.show-nav {
-  transform: translateY(0);
-  transition: transform 0.3s ease-in-out;
-}
-
-/* Hide the navigation bar */
-.hide-nav {
-  transform: translateY(-100%);
-  transition: transform 0.3s ease-in-out;
+body{
+  width: screen;
 }
